# fastkmeans

./: .gitignore  README.md  bench_env.yaml  mkdocs.yml  pyproject.toml  speedbench.py
.github/workflows/: docs.yml
docs/: api.md  benchmark_plots
fastkmeans/: __init__.py  kmeans.py  launcher.py  triton_kernels.py
