[project]
name = "fastkmeans"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["torch", "numpy"]
authors = [
  {name = "Ben Clavié", email = "bc@answer.ai" },
  {name = "Benjamin Warner", email = "bw@answer.ai" }
]
maintainers = [
  {name = "Ben Clavié", email = "bc@answer.ai" },
  {name = "Benjamin Warner", email = "bw@answer.ai" }
]
license = {text = "Apache-2.0"}

[tool.setuptools]
packages = ["fastkmeans"]
