[project]
name = "fastkmeans"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch", "numpy"]
authors = [
  {name = "Ben Clavié", email = "bc@answer.ai" },
  {name = "Benjamin Warner", email = "bw@answer.ai" }
]
maintainers = [
  {name = "Ben Clavié", email = "bc@answer.ai" },
  {name = "Benjamin Warner", email = "bw@answer.ai" }
]
license = {text = "Apache-2.0"}

[tool.setuptools]
packages = ["fastkmeans"]

[dependency-groups]
cpu = ["torch>=2.4"]
cu124 = ["torch>=2.4"]
cu128 = ["torch>=2.7"]
rocm = ["torch>=2.7", "pytorch-triton-rocm>=3.3.0"]
xpu = ["torch>=2.7.1", "pytorch-triton-xpu>=3.3.0"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.26.1",
    "pymdown-extensions>=10.15",
]

[project.optional-dependencies]
bench = [
    "matplotlib>=3.7.5",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "typer>=0.15.3",
]

[tool.uv]
conflicts = [
  [
    { group = "cpu" },
    { group = "cu124" },
    { group = "cu128" },
    { group = "rocm" },
    { group = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", group = "cpu" },
  { index = "pytorch-cu124", group = "cu124" },
  { index = "pytorch-cu128", group = "cu128" },
  { index = "pytorch-rocm", group = "rocm" },
  { index = "pytorch-xpu", group = "xpu" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", group = "rocm" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", group = "xpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true